# boileroom

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  rgn2_install.sh  script.py  test_rgn2.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: arm64-image-smoke.yml  build-docker-images.yml  cleanup-dockerhub-tags.yml  integration-tests.yaml  pypi-publish.yaml  python-checks.yaml  version-bump.yaml
boileroom/: __init__.py  base.py  constants.py  convert.py  esm2.py  esmfold.py  inputs.py  linker.py  utils.py
boileroom/backend/: __init__.py  apptainer.py  base.py  conda.py  local.py  modal.py  progress.py  server.py  transport.py
boileroom/images/: Dockerfile  __init__.py  base.py  boltz.py  chai.py  chai1.py  esm.py  import_checks.py  metadata.py  modal.py  protenix.py  volumes.py
boileroom/models/: __init__.py  registry.py
boileroom/models/boltz/: core.py  (+8 more)
boileroom/testing/: __init__.py  fake_core.py
docs/: agent_harness.md  architecture.md  backend_support_matrix.md  conda_backend_cleanup.md  docker_images.md  local_debugging.md  migration_v0.2_to_v0.3.md  models.md
harness/: model_family_contract.yaml
scripts/: check_conda_backends.sh  check_gcc_summary.sh  cleanup_conda_backends.py  cli_utils.py  verify_gcc_complete.sh  verify_gcc_in_apptainer.sh  verify_gcc_in_docker.sh
scripts/ci/: derive_version.py
scripts/harness/: check_repo.py
scripts/images/: build_all_docker.sh  build_all_podman.sh  build_model_images.py  build_model_images.sh  check_model_imports.py  check_model_imports.sh  check_model_server_health.py  check_model_server_health.sh  cleanup_dockerhub_tags.py  promote_image_tags.py  push_all_dev_to_dockerhub.sh
tests/: conftest.py  test_apptainer_backend.py  test_basic.py  test_utils.py
tests/alphafold/: test_alphafold2_multimer_core.py
tests/backend/: test_progress.py
tests/boltz/: test_boltz2.py
tests/chai/: test_chai1.py
tests/chai1/: test_chai1.py
tests/contracts/: test_build_model_images.py  test_cleanup_dockerhub_tags.py  test_cli.py  test_confidence_metrics.py  test_core_metadata_isolation.py  test_derive_version.py  test_harness.py  test_image_metadata.py  test_model_wrappers.py  test_pytest_image_options.py  test_transport.py
tests/data/: multimer-check.txt
tests/esm/: test_esm2.py  test_esm2_core.py  test_esm2_position_routing.py  test_esmfold.py  test_linker.py
tests/esm3/: test_esm3_embeddings.py
tests/esmc/: test_esmc_embeddings.py
(+101 files in other folders)
