[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boileroom"
version = "0.3.0"
authors = [
    { name="Jakub Lála", email="jakublala@gmail.com" },
]
description = "Protein prediction models with Modal"
readme = "README.md"
requires-python = "==3.12.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27.0",
    "modal>=1.1.0",
    "numpy>=2.2.2",
    "biotite>=1.0.1",
    "torch>=2.6.0,<2.7.0",
    "deprecated>=1.2.14",
    "pyyaml>=6.0.0",
    "rich>=14.0.0",
]
[project.optional-dependencies]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
    "pytest-mock>=3.14.0",
    "fire>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/softnanolab/boileroom"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
markers = [
    "contract: fast backend-free contract tests for public wrappers and onboarding behavior",
    "integration: real model execution against Modal or Apptainer",
    "slow: tests that take longer than a typical unit test run",
    "gpu: tests that require GPU-backed execution or GPU-specific configuration",
]
